--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="timer" data-timer></div>
     <div class="container">
-        <div class="quote-display" data-quote-display></div>
+        <div class="quote-display unselectable" data-quote-display></div>
         <textarea class="quote-input" data-quote-input autofocus spellcheck="false"></textarea>
     </div>
 </body>
