--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="container">
         <div class="quote-display unselectable" data-quote-display></div>
         <textarea class="quote-input" data-quote-input autofocus spellcheck="false"></textarea>
+        <p data-quote-result class="hidden quote-result"></p>
+        <button data-quote-btn class="hidden quote-btn">Next Quote</button>
     </div>
 </body>
 </html>
